k8s/web-app/web-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: webapp  # Specify namespace here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      restartPolicy: Always  # Set restartPolicy for the pod
      containers:
      - name: webapp
        image: europe-west1-docker.pkg.dev/rare-phoenix-413915/my-repository/web-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthz  # Change this to the endpoint that indicates the health of your application
            port: 80      # Change this to the port on which your application listens
          initialDelaySeconds: 2
          periodSeconds: 2
          failureThreshold: 0
