k8s/web-app/web-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp2
  template:
    metadata:
      labels:
        app: webapp2
    spec:
      restartPolicy: Always  # Set restartPolicy for the pod
      containers:
      - name: webapp2
        image: europe-west1-docker.pkg.dev/rare-phoenix-413915/my-repository/web-app-2:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
