k8s/web-app/web-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp1
  template:
    metadata:
      labels:
        app: webapp1
    spec:
      restartPolicy: Always  # Set restartPolicy for the pod
      containers:
      - name: webapp1
        image: europe-west1-docker.pkg.dev/rare-phoenix-413915/my-repository/web-app-1:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: webapp1-service
spec:
  selector:
    app: webapp1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
