k8s/web-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: webapp1-service
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: webapp2-service
            port:
              number: 80
